// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template List Components LastUpdated should render 1`] = `
<p>
  Aug 10 2017, 10:15am
</p>
`;

exports[`Template List Components Name should render 1`] = `
<PageLink
  to="/templates/edit/id-123/draft/content?subaccount=123"
>
  template name
</PageLink>
`;

exports[`Template List Components Status should render draft 1`] = `
<Tag>
  Draft
</Tag>
`;

exports[`Template List Components Status should render published 1`] = `
<Tag
  color="green"
>
  Published
</Tag>
`;

exports[`Template List Components Status should render unpublished changes 1`] = `
<Tooltip
  content="Contains unpublished changes"
  dark={true}
  id="templates-status-3"
>
  <Tag
    color="green"
  >
    Published
  </Tag>
</Tooltip>
`;
